<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/mensaje"
        android:textAllCaps="true"
        android:textSize="25px"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.27" >

        <TableRow
            android:id="@+id/tableRow1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:bufferType="editable"
                android:padding="10sp"
                android:text="@string/nom" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:completionThreshold="3"/>
                <requestFocus />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:bufferType="editable"
                android:padding="6sp"
                android:text="@string/direccion" />

            <EditText
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
         </TableRow>

        <TableRow
            android:id="@+id/tableRow3" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:bufferType="editable"
                android:padding="9sp"
                android:text="@string/tel" />

            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCancelarClick"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onAgregarClick"
                android:text="@string/add" />
        </TableRow>
    </TableLayout>

</LinearLayout>